--- a/LightControl/LightControl.csproj
+++ b/LightControl/LightControl.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>LightControl</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\App.SDMS\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,12 +40,32 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\..\App.SDMS\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\..\App.SDMS\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CCSCommandModel.cs" />
+    <Compile Include="CCSLightControlManager.cs" />
+    <Compile Include="CCSReceiveDataResolver.cs" />
+    <Compile Include="CCSReceiveMessageViewModel.cs" />
+    <Compile Include="ChannelStatusViewModel.cs" />
+    <Compile Include="ConnectionEventArgs.cs" />
+    <Compile Include="InstructionModel.cs" />
+    <Compile Include="LightControlInitEventArgs.cs" />
+    <Compile Include="LightControllerResponseEventArgs.cs" />
     <Compile Include="PD3LightControlManager.cs" />
+    <Compile Include="PD3Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
