PD3_Ethernet_LightControl (^)目錄結構調整 : PD3_Ethernet_LightControl/PD3_Ethernet_LightControl/*.*                   =>PD3_Ethernet_LightControl/ (-)刪除目錄 PD3_Ethernet_LightControl/PD3_Ethernet_LightControl

--- a/Hanbo.Helper/Hanbo.Helper.csproj
+++ b/Hanbo.Helper/Hanbo.Helper.csproj
@@ -76,7 +76,7 @@
       <Project>{c4f5c5de-7ea8-47fe-8218-48138f48965f}</Project>
       <Name>ViewROI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hanbo.Models\Hanbo.Models\Hanbo.Models.csproj">
+    <ProjectReference Include="..\Hanbo.Models\Hanbo.Models.csproj">
       <Project>{374acc46-4c98-4de9-8ed8-fbfeb769f1f2}</Project>
       <Name>Hanbo.Models</Name>
     </ProjectReference>
