--- a/PD3_Ethernet_LightControl/PD3_Ethernet_LightControl.csproj
+++ b/PD3_Ethernet_LightControl/PD3_Ethernet_LightControl.csproj
@@ -117,15 +117,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Hanbo.Helper\Hanbo.Helper.csproj">
+    <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
       <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
       <Name>Hanbo.Helper</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Hanbo.System.SingleInstance\Hanbo.System.SingleInstance.csproj">
+    <ProjectReference Include="..\Hanbo.System.SingleInstance\Hanbo.System.SingleInstance.csproj">
       <Project>{af11882b-41bd-423f-be54-262554ecc943}</Project>
       <Name>Hanbo.System.SingleInstance</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\LightControl\LightControl.csproj">
+    <ProjectReference Include="..\LightControl\LightControl.csproj">
       <Project>{e21f80eb-cb40-469e-b1f0-0494ac4b40e9}</Project>
       <Name>LightControl</Name>
     </ProjectReference>
