--- a/SDMSRepoTest/Hanbo.SDMS.Model.Test.csproj
+++ b/SDMSRepoTest/Hanbo.SDMS.Model.Test.csproj
@@ -63,7 +63,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MatchingModule\MatchingModule\MatchingModule.csproj">
+    <ProjectReference Include="..\MatchingModule\MatchingModule.csproj">
       <Project>{8a6b99f7-82ef-4bd2-bfd3-2e2a7bc225e3}</Project>
       <Name>MatchingModule</Name>
     </ProjectReference>
@@ -79,7 +79,7 @@
       <Project>{e21f80eb-cb40-469e-b1f0-0494ac4b40e9}</Project>
       <Name>LightControl</Name>
     </ProjectReference>
-    <ProjectReference Include="..\PD3_Ethernet_LightControl\PD3_Ethernet_LightControl\PD3_Ethernet_LightControl.csproj">
+    <ProjectReference Include="..\PD3_Ethernet_LightControl\PD3_Ethernet_LightControl.csproj">
       <Project>{6c4fded4-cdb4-444f-8798-1d5d223636ab}</Project>
       <Name>PD3_Ethernet_LightControl</Name>
     </ProjectReference>
