(+) 新增 FitLine 演算法

--- a/MeasureModule/MeasureModule.csproj
+++ b/MeasureModule/MeasureModule.csproj
@@ -92,6 +92,7 @@
     <Compile Include="MeasurementDistanceX.cs" />
     <Compile Include="MeasurementDistanceY.cs" />
     <Compile Include="MeasurementEdge.cs" />
+    <Compile Include="MeasurementFitLine.cs" />
     <Compile Include="MeasurementPair.cs" />
     <Compile Include="MeasurementResult.cs" />
     <Compile Include="MeasurementSymmetryLine.cs" />
