--- a/Hanbo.SDMS.Model/Hanbo.SDMS.Model.csproj
+++ b/Hanbo.SDMS.Model/Hanbo.SDMS.Model.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -89,6 +89,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
+      <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
+      <Name>Hanbo.Helper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hanbo.Models\Hanbo.Models.csproj">
       <Project>{374acc46-4c98-4de9-8ed8-fbfeb769f1f2}</Project>
       <Name>Hanbo.Models</Name>
@@ -100,10 +104,6 @@
     <ProjectReference Include="..\PD3_Ethernet_LightControl\PD3_Ethernet_LightControl.csproj">
       <Project>{6c4fded4-cdb4-444f-8798-1d5d223636ab}</Project>
       <Name>PD3_Ethernet_LightControl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
-      <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
-      <Name>Hanbo.Helper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
