--- a/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
+++ b/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
@@ -36,7 +36,7 @@
       <HintPath>C:\Program Files\MVTec\HALCON-10.0\bin\dotnet35\halcondotnet.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
-      <HintPath>..\..\App.MacroProject\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
