--- a/MeasureModule/MeasureModule.csproj
+++ b/MeasureModule/MeasureModule.csproj
@@ -58,7 +58,7 @@
       <HintPath>$(HALCONROOT)\bin\dotnet20\halcondotnet.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
-      <HintPath>..\..\App.SDMS\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
+      <HintPath>..\..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
