--- a/Hanbo.System.SingleInstance/Hanbo.System.SingleInstance.csproj
+++ b/Hanbo.System.SingleInstance/Hanbo.System.SingleInstance.csproj
@@ -52,9 +52,17 @@
       <Project>{d3f62b01-465c-4ff3-9ae7-5e4eb14f2aac}</Project>
       <Name>Hanbo.Configuration.Settings</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Hanbo.Custom.Attribute\Hanbo.Custom.Attribute.csproj">
+      <Project>{f615c268-d194-4b8e-9d2a-04cad755988e}</Project>
+      <Name>Hanbo.Custom.Attribute</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hanbo.Image.Grab\Hanbo.Image.Grab.csproj">
       <Project>{11ee3837-fcab-4492-b7c8-333429ea6d1c}</Project>
       <Name>Hanbo.Image.Grab</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hanbo.Resources\Hanbo.Resources.csproj">
+      <Project>{997bcb46-e343-45e3-ba64-b054381499cd}</Project>
+      <Name>Hanbo.Resources</Name>
     </ProjectReference>
     <ProjectReference Include="..\LightControl\LightControl.csproj">
       <Project>{e21f80eb-cb40-469e-b1f0-0494ac4b40e9}</Project>
