--- a/MeasureModule/MeasureModule.csproj
+++ b/MeasureModule/MeasureModule.csproj
@@ -109,6 +109,10 @@
     <Compile Include="ViewModel\GeoDataGridViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Hanbo.Custom.Attribute\Hanbo.Custom.Attribute.csproj">
+      <Project>{f615c268-d194-4b8e-9d2a-04cad755988e}</Project>
+      <Name>Hanbo.Custom.Attribute</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
       <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
       <Name>Hanbo.Helper</Name>
