--- a/Hanbo.Helper.Test/Hanbo.Helper.Test.csproj
+++ b/Hanbo.Helper.Test/Hanbo.Helper.Test.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7AC32BDF-F82E-4B5B-A6FD-A9B2CA5BCB4E}</ProjectGuid>
+    <ProjectGuid>{8D1C08AD-EB56-4850-8D96-53CE0A47D898}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hanbo.Helper</RootNamespace>
-    <AssemblyName>Hanbo.Helper</AssemblyName>
+    <RootNamespace>Hanbo.Helper.Test</RootNamespace>
+    <AssemblyName>Hanbo.Helper.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\MotionApp\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,60 +36,35 @@
     <Reference Include="halcondotnet">
       <HintPath>C:\Program Files\MVTec\HALCON-10.0\bin\dotnet35\halcondotnet.dll</HintPath>
     </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\..\packages\NLog.2.0.1.2\lib\net40\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\..\MotionApp\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\..\MotionApp\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CameraSystem.cs" />
-    <Compile Include="ConfigurationHelper.cs" />
-    <Compile Include="HanboSecurityHelper.cs" />
-    <Compile Include="ImageAssociate.cs" />
-    <Compile Include="ImageConventer.cs" />
-    <Compile Include="LicenseChecker.cs" />
-    <Compile Include="ModelSerializer.cs" />
-    <Compile Include="ProcessChecker.cs" />
-    <Compile Include="ResourceHelper.cs" />
-    <Compile Include="ShapeFinder.cs" />
+    <Compile Include="ImageAssociateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Hanbo.Models\Hanbo.Models.csproj">
-      <Project>{374acc46-4c98-4de9-8ed8-fbfeb769f1f2}</Project>
-      <Name>Hanbo.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ViewROI\ViewROI.csproj">
-      <Project>{c4f5c5de-7ea8-47fe-8218-48138f48965f}</Project>
-      <Name>ViewROI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hanbo.Resources\Hanbo.Resources.csproj">
-      <Project>{997bcb46-e343-45e3-ba64-b054381499cd}</Project>
-      <Name>Hanbo.Resources</Name>
+    <ProjectReference Include="..\Hanbo.Helper\Hanbo.Helper.csproj">
+      <Project>{7ac32bdf-f82e-4b5b-a6fd-a9b2ca5bcb4e}</Project>
+      <Name>Hanbo.Helper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
