SDMS.Model (^) dbml 更新，MacroPlan 新增欄位 (^) Repo 更新，新增方法處理新增欄位 (^) NLog version update to 2.1.0

--- a/Hanbo.SDMS.Model/App.config
+++ b/Hanbo.SDMS.Model/App.config
@@ -6,9 +6,12 @@
 		<add key="SaveImageDefaultDirectory" value="D:\"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="SDMSConnString" connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user; Password=happy99;"/>
-		<add name="Hanbo.SDMS.Model.Properties.Settings.AOM_SDMSConnectionString"
-		 connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user"
-		 providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="SDMSConnString" connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user; Password=happy99;" />
+  <add name="Hanbo.SDMS.Model.Properties.Settings.AOM_SDMSConnectionString"
+   connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user"
+   providerName="System.Data.SqlClient" />
+  <add name="Hanbo.SDMS.Model.Properties.Settings.AOM_SDMSConnectionString1"
+   connectionString="Data Source=.\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
