--- a/Hanbo.SDMS.Model/Properties/Settings.settings
+++ b/Hanbo.SDMS.Model/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user</Value>
     </Setting>
+    <Setting Name="AOM_SDMSConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=.\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=.\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
