--- a/Hanbo.Log/NLog.config
+++ b/Hanbo.Log/NLog.config
@@ -8,18 +8,28 @@
    -->
   <targets>
     <!-- add your targets here -->
-    
-    <!--
+
+    <!---->
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
+				layout="${longdate} ${uppercase:${level}} ${message}" />
+
+    <target xsi:type="File" name="ErrorWriter" fileName="${basedir}/logs/${shortdate}Exception.log"
+				layout="發生時間：${longdate}${newline}
+              類別：${logger}${newline}
+              訊息：${message}${newline}
+              方法：${stacktrace:format=DetailedFlat}${newline}
+              例外堆疊：${exception:format=ToString}${newline}
+              =============================================================" />
+
+
   </targets>
 
   <rules>
     <!-- add your logging rules here -->
-    
-    <!--
+
+    <!---->
     <logger name="*" minlevel="Trace" writeTo="f" />
-    -->
+    <logger name="*" minlevel="Error" writeTo="ErrorWriter" />
+
   </rules>
 </nlog>
