--- a/Hanbo.Models/Hanbo.Models.csproj
+++ b/Hanbo.Models/Hanbo.Models.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Argument\AutoExportArgument.cs" />
     <Compile Include="ExportMacroPlanViewModel.cs" />
     <Compile Include="LanguageViewModel.cs" />
+    <Compile Include="LightDTO.cs" />
+    <Compile Include="LightViewModel.cs" />
     <Compile Include="MacroViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeViewModel.cs" />
