(+) 新增 MessageDisplayer.cs

--- a/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
+++ b/Hanbo.WindowControlWrapper/Hanbo.WindowControlWrapper.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeoDataGridViewManager.cs" />
+    <Compile Include="MessageDisplayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
