--- a/LightControl/LightControl.csproj
+++ b/LightControl/LightControl.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CCSCommandModel.cs" />
+    <Compile Include="CCSLightControlAssistant.cs" />
     <Compile Include="CCSLightControlManager.cs" />
     <Compile Include="CCSReceiveDataResolver.cs" />
     <Compile Include="CCSReceiveMessageViewModel.cs" />
