--- a/Hanbo.Helper.Test/Hanbo.Helper.Test.csproj
+++ b/Hanbo.Helper.Test/Hanbo.Helper.Test.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationHelperTest.cs" />
+    <Compile Include="ExportHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
