--- a/Hanbo.SDMS.Model/App.config
+++ b/Hanbo.SDMS.Model/App.config
@@ -6,11 +6,8 @@
 		<add key="SaveImageDefaultDirectory" value="D:\"/>
 	</appSettings>
 	<connectionStrings>
-  <add name="SDMSConnString" connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user; Password=happy99;" />
+  <add name="SDMSConnString" connectionString="Data Source=.\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user; Password=happy99;" />
   <add name="Hanbo.SDMS.Model.Properties.Settings.AOM_SDMSConnectionString"
-   connectionString="Data Source=johnnb\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user"
-   providerName="System.Data.SqlClient" />
-  <add name="Hanbo.SDMS.Model.Properties.Settings.AOM_SDMSConnectionString1"
    connectionString="Data Source=.\sqlexpress;Initial Catalog=AOM_SDMS;User ID=hanbo_user"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
