工程圖功能修正 (^) 繪圖方法及模型建立

--- a/ViewROI/ViewROI.csproj
+++ b/ViewROI/ViewROI.csproj
@@ -84,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunctionPlot.cs" />
+    <Compile Include="Interface\IProg.cs" />
     <Compile Include="MeasureParameter.cs" />
     <Compile Include="Model\PositionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
