--- a/Hanbo.Resources/Hanbo.Resources.csproj
+++ b/Hanbo.Resources/Hanbo.Resources.csproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <None Include="Resources\saveDraw.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\grident_22.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
