--- a/Hanbo.Resources/Hanbo.Resources.csproj
+++ b/Hanbo.Resources/Hanbo.Resources.csproj
@@ -168,6 +168,15 @@
   <ItemGroup>
     <None Include="Resources\zoomLayer_24.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\message_attention.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\disconnect.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\connect.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
